Fix issue with gradients getting cut off

--- a/app/(pages)/(home)/page.module.scss
+++ b/app/(pages)/(home)/page.module.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: calc(8px * 123);
+    // width: calc(8px * 123);
     gap: 80px;
     margin: auto;
 }
@@ -25,11 +25,12 @@
 }
 
 .swiper{
-    width: 100%;
+    width: calc(8px * 123);
     display: flex;
     justify-content: center;
     align-items: center;
     margin: auto;
+    overflow: visible !important;
 }
 
 .swiperslide{
@@ -62,6 +63,14 @@
     transform: scale(0.75);
     opacity: 0.7;
     filter: blur(4px);
+}
+
+.shown {
+    
+}
+
+.unshown {
+    display: none;
 }
 
 .image{
